Lost and found.
Change-Id: I3aa4824e2c2157be715d93b698963c54dd98e099

--- a/samples/Support4Demos/res/values/strings.xml
+++ b/samples/Support4Demos/res/values/strings.xml
@@ -78,6 +78,8 @@
     <string name="new_fragment">New fragment</string>
 
     <string name="fragment_pager_support">Fragment/Pager</string>
+    <string name="first">First</string>
+    <string name="last">Last</string>
 
     <string name="loader_cursor_support">Loader/Cursor</string>
     
