--- a/samples/Support4Demos/res/values/strings.xml
+++ b/samples/Support4Demos/res/values/strings.xml
@@ -81,6 +81,8 @@
     <string name="first">First</string>
     <string name="last">Last</string>
 
+    <string name="fragment_state_pager_support">Fragment/State Pager</string>
+
     <string name="loader_cursor_support">Loader/Cursor</string>
     
     <string name="loader_throttle_support">Loader/Throttle</string>
