New API demos showing use of tabs with fragments.
Also various cleanup in other demos.

Change-Id: I4f5669117e28312bcd4b28795c5eca5f4ab6dcfb

--- a/samples/Support13Demos/res/values/strings.xml
+++ b/samples/Support13Demos/res/values/strings.xml
@@ -29,4 +29,5 @@
 
     <string name="fragment_state_pager_support">Fragment/State Pager</string>
 
+    <string name="action_bar_tabs_pager">Fragment/Action Bar Tabs Pager</string>
 </resources>
