Add API demo for LocalBroadcastManager.
Change-Id: Iee1e1189c579ab287718d138916448a02a833e44

--- a/samples/Support4Demos/res/values/strings.xml
+++ b/samples/Support4Demos/res/values/strings.xml
@@ -93,4 +93,11 @@
 
     <string name="loader_throttle_support">Loader/Throttle</string>
 
+    <string name="local_service_broadcaster">Content/Local Service Broadcaster</string>
+
+    <string name="local_service_broadcaster_msg">Demonstrates use of LocalBroadcastManager
+        to communicate from a Service to an Activity.</string>
+    <string name="start_service">Start Service</string>
+    <string name="stop_service">Stop Service</string>
+
 </resources>
