Add code sample for ShareCompat
Add SharingSupport activity - use ShareCompat.IntentBuilder to produce
sharing intents for menu item sharing, text only, single stream, and
multiple stream.

Add SharingReceiverSupport - receive text/plain content as text only,
single stream, and multiple stream.

Add SharingSupportProvider - simple filesystem-based read-only
ContentProvider for providing a data stream.

Change-Id: I7e69a80984c0c5a8d93663f928f644d55c92350d

--- a/samples/Support4Demos/res/values/strings.xml
+++ b/samples/Support4Demos/res/values/strings.xml
@@ -122,4 +122,10 @@
     <string name="accessibility_delegate_button">Button</string>
     <string name="accessibility_delegate_custom_text_added">Custom text added via an accessibility delegate.</string>
 
+    <string name="share_text">Share some text</string>
+    <string name="share_file">Share a file</string>
+    <string name="share_multiple_file">Share multiple files</string>
+    <string name="sharing_support_title">ShareCompat Demo</string>
+    <string name="sharing_receiver_title">ShareCompat Receiver</string>
+
 </resources>
