--- a/v7/mediarouter/res/values/strings.xml
+++ b/v7/mediarouter/res/values/strings.xml
@@ -16,18 +16,18 @@
 
 <resources>
     <!-- Name for the default system route prior to Jellybean. [CHAR LIMIT=30] -->
-    <string name="system_route_name">System</string>
+    <string name="mr_system_route_name">System</string>
 
     <!-- Name for the user route category created when publishing routes to the system in Jellybean and above. [CHAR LIMIT=30] -->
-    <string name="user_route_category_name">Devices</string>
+    <string name="mr_user_route_category_name">Devices</string>
 
     <!-- Content description of a MediaRouteButton for accessibility support. [CHAR LIMIT=50] -->
-    <string name="media_route_button_content_description">Media output</string>
+    <string name="mr_media_route_button_content_description">Media output</string>
 
     <!-- Title of the media route chooser dialog. [CHAR LIMIT=30] -->
-    <string name="media_route_chooser_title">Connect to device</string>
+    <string name="mr_media_route_chooser_title">Connect to device</string>
 
     <!-- Button to disconnect from a media route.  [CHAR LIMIT=30] -->
-    <string name="media_route_controller_disconnect">Disconnect</string>
+    <string name="mr_media_route_controller_disconnect">Disconnect</string>
 
 </resources>
