Rename remaining resources to use abc_ prefix
Bug: 9100364

Change-Id: I93332ecaf1e8d5234acf005e263c6c0309e6413f
Signed-off-by: Chris Banes <chrisbanes@google.com>

--- a/v7/appcompat/res/values/strings.xml
+++ b/v7/appcompat/res/values/strings.xml
@@ -16,13 +16,13 @@
 
 <resources>
     <!-- Label for the "Done" button on the far left of action mode toolbars. -->
-    <string name="action_mode_done">Done</string>
+    <string name="abc_action_mode_done">Done</string>
     <!-- Content description for the action bar "home" affordance. [CHAR LIMIT=NONE] -->
-    <string name="action_bar_home_description">Navigate home</string>
+    <string name="abc_action_bar_home_description">Navigate home</string>
     <!-- Content description for the action bar "up" affordance. [CHAR LIMIT=NONE] -->
-    <string name="action_bar_up_description">Navigate up</string>
+    <string name="abc_action_bar_up_description">Navigate up</string>
     <!-- Content description for the action menu overflow button. [CHAR LIMIT=NONE] -->
-    <string name="action_menu_overflow_description">More options</string>
+    <string name="abc_action_menu_overflow_description">More options</string>
 
     <!-- SearchView accessibility description for search button [CHAR LIMIT=NONE] -->
     <string name="abc_searchview_description_search">Search</string>
