--- a/samples/Support7Demos/src/main/res/values/strings.xml
+++ b/samples/Support7Demos/src/main/res/values/strings.xml
@@ -78,6 +78,7 @@
     <string name="appcompat_widgets_switches">AppCompat/Widgets/Switches</string>
     <string name="appcompat_widgets_text_input">AppCompat/Widgets/Text Input</string>
     <string name="appcompat_widgets_text_views">AppCompat/Widgets/Text Views</string>
+    <string name="appcompat_widgets_toggle_buttons">AppCompat/Widgets/Toggle Buttons</string>
 
     <string name="action_bar_search">Search</string>
     <string name="action_bar_add">Add</string>
