--- a/media2/widget/src/main/res/values-mk/strings.xml
+++ b/media2/widget/src/main/res/values-mk/strings.xml
@@ -29,7 +29,7 @@
     <string name="mcv2_non_music_title_unknown_text" msgid="5414417081368449210">"Непознат наслов на видео"</string>
     <string name="mcv2_music_title_unknown_text" msgid="6768779662371844918">"Непознат наслов на песна"</string>
     <string name="mcv2_music_artist_unknown_text" msgid="1475333855817994058">"Непознат изведувач"</string>
-    <string name="mcv2_playback_error_text" msgid="1201919666572302119">"Не можеше да се пушти ставката што ја побаравте"</string>
+    <string name="mcv2_playback_error_text" msgid="1201919666572302119">"Не може да се пушти ставката што ја побаравте"</string>
     <string name="mcv2_error_dialog_button" msgid="1892680062375516133">"Во ред"</string>
     <string name="mcv2_back_button_desc" msgid="5728972524527278943">"Назад"</string>
     <string name="mcv2_overflow_left_button_desc" msgid="4619938179240477643">"Назад кон списокот со претходното копче"</string>
