--- a/glance/glance-appwidget/integration-tests/demos/src/main/res/values/strings.xml
+++ b/glance/glance-appwidget/integration-tests/demos/src/main/res/values/strings.xml
@@ -27,4 +27,5 @@
     <string name="resizing_widget_name">Resizing Widget</string>
     <string name="compound_button_widget_name">CheckBox Widget</string>
     <string name="error_widget_name">Error UI Widget</string>
+    <string name="scrollable_widget_name">Scrollable Widget</string>
 </resources>
