Initial Glance-image sample for widgets
Simple showcase to show the different content scale by changing the content scale when the button is tapped.

Test: manual
Change-Id: I80a010ff20015c22c0296aae98003896360ac796

--- a/glance/glance-appwidget/integration-tests/demos/src/main/res/values/strings.xml
+++ b/glance/glance-appwidget/integration-tests/demos/src/main/res/values/strings.xml
@@ -27,4 +27,5 @@
     <string name="compound_button_widget_name">CheckBox Widget</string>
     <string name="error_widget_name">Error UI Widget</string>
     <string name="scrollable_widget_name">Scrollable Widget</string>
+    <string name="image_widget_name">Image Widget</string>
 </resources>
