--- a/wear/watchface/watchface-style/src/androidTest/res/values/strings.xml
+++ b/wear/watchface/watchface-style/src/androidTest/res/values/strings.xml
@@ -20,4 +20,7 @@
     <string name="green_style_name">Green Style</string>
     <string name="colors_style_setting">Colors</string>
     <string name="colors_style_setting_description">Watchface colorization</string>
+
+    <string name="hour_pips_setting">Hour Pips</string>
+    <string name="hour_pips_setting_description">Whether pips for hours should be drawn</string>
 </resources>
