Catch exceptions and display an error Ui
We catch as many exceptions as possible and display an error Ui instead
of crashing.

The exceptions are caught in the App Widget Receiver, and also in the
GlanceAppWidget itself.

This also adds a new demos to show the interception.

Relnote: n/a
Test: Demos
Bug: 204922935

Change-Id: Ie98874b87689676603609a967f40c832404d7d0c

--- a/glance/glance-appwidget/integration-tests/demos/src/main/res/values/strings.xml
+++ b/glance/glance-appwidget/integration-tests/demos/src/main/res/values/strings.xml
@@ -27,4 +27,5 @@
     <string name="exact_widget_title"><u>Exact layout</u></string>
     <string name="resizing_widget_name">Resizing Widget</string>
     <string name="compound_button_widget_name">CheckBox Widget</string>
+    <string name="error_widget_name">Error UI Widget</string>
 </resources>
