--- a/glance/glance-appwidget/integration-tests/demos/src/main/res/values/strings.xml
+++ b/glance/glance-appwidget/integration-tests/demos/src/main/res/values/strings.xml
@@ -22,8 +22,7 @@
     <string name="exact_widget_name">Exact Widget</string>
     <string name="responsive_widget_title"><u>Responsive layout</u></string>
     <string name="updating_widget_name"><u>Updating widget</u></string>
-    <string name="updating_title_a"><u>Widget title A</u></string>
-    <string name="updating_title_b"><u>Widget title B</u></string>
+    <string name="updating_title"><u>Updating Widget</u></string>
     <string name="exact_widget_title"><u>Exact layout</u></string>
     <string name="resizing_widget_name">Resizing Widget</string>
     <string name="compound_button_widget_name">CheckBox Widget</string>
